--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,19 @@
+amqp==2.3.2
+billiard==3.5.0.5
+celery==4.2.1
 Django==2.1.3
 django-bootstrap-form==3.4
+django-celery-results==1.0.4
 djangorestframework==3.9.0
 html5lib==1.0.1
+kombu==4.2.2
 Pillow==5.3.0
 PyPDF2==1.26.0
 pytz==2018.7
+redis==3.0.1
 reportlab==3.5.12
 six==1.11.0
+vine==1.1.4
 webencodings==0.5.1
 xhtml2pdf==0.2.3
 xlwt==1.3.0
